2004-01-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/parse_filename.h:
	* libpp/parse_filename.cpp: profile_spec_equal() new predicate
	* libpp/arrange_profiles.cpp: use it to ensure we cerate a new
	  profile_samples_file when needed.

2004-01-24  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/opstack.1.in: some cleanups

	* libop/tests/load_events_files_tests.c:
	* libop/tests/alloc_counter_tests.c:
	* libop/op_events.c: rename env var to OPROFILE_EVENTS_DIR

2004-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c: (getfile()) avoid out of bound sf->files[] access

2004-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: tweak comparator to sort arcs.
	* pp/common_option.cpp: typo.

2004-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opannotate.1.in:
	* doc/opgprof.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.xml:
	* doc/opstack.1.in: document --verbose options a bit
	* libutil++/cverb.cpp:
	* libutil++/cverb.h:
	* pp/common_option.cpp: remove vlevel2 verbose object

2004-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/cverb.h:
	* libutil++/cverb.cpp: new cverb handling. most interresting are
	  --verbose=sfile,bfd,level1 resp. sample filename handling bfd
	  handling and more verbosity (only for bfd actually)

	* pp/opgprof.cpp: controlled by --verbose==bfd, add level1 to get
	  verbose symbols.
	* libpp/callgraph_container.cpp:
	* libutil++/op_bfd.cpp:
	* pp/common_option.cpp:
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp:
	* pp/opstack_options.cpp: use it

2004-01-19  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp: rename caller_callee_recorder
	to arc_recorder.

	* doc/CodingStyle: mention trailing comments

	* utils/opcontrol: fix formatting. Error if --note-table-size
	is passed on 2.6 kernels.

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_debug.c: fix build on alpha